# AliceVision

./: CMakeLists.txt
script/: install-deps-windows.bat
src/: CMakeLists.txt
src/aliceVision/depthMap/: CMakeLists.txt  MultiGPUAccessOptimization.cpp  MultiGPUAccessOptimization.hpp  RcTc.cpp  RefineRc.cpp  RefineRc.hpp  SemiGlobalMatchingRc.cpp  SemiGlobalMatchingRc.hpp  SemiGlobalMatchingRcTc.cpp  SemiGlobalMatchingRcTc.hpp  SemiGlobalMatchingVolume.cpp  SemiGlobalMatchingVolume.hpp
src/aliceVision/depthMap/cuda/: PlaneSweepingCuda.cpp  PlaneSweepingCuda.hpp  commonStructures.hpp
src/aliceVision/depthMap/cuda/deviceCommon/: device_color.cu  device_patch_es.cu
src/aliceVision/depthMap/cuda/planeSweeping/: device_code.cu  device_code_volume.cu  plane_sweeping_cuda.cu
src/aliceVision/fuseCut/: CMakeLists.txt  DelaunayGraphCut.cpp  DelaunayGraphCut.hpp
src/aliceVision/imageIO/: image.cpp
src/aliceVision/matching/: CMakeLists.txt
src/aliceVision/mesh/: Mesh.cpp  Mesh.hpp  Texturing.cpp  Texturing.hpp  meshPostProcessing.cpp  meshVisibility.cpp
src/aliceVision/mvsData/: geometry.cpp
src/aliceVision/mvsUtils/: MultiViewParams.cpp  common.cpp  common.hpp  fileIO.cpp
src/aliceVision/sfmData/: SfMData.hpp  colorize.cpp  colorize.hpp
src/aliceVision/sfmDataIO/: AlembicExporter.cpp  AlembicImporter.cpp  jsonIO.cpp  jsonIO.hpp  plyIO.cpp  plyIO.hpp  sfmDataIO.cpp
src/cmake/: FindOpenEXR.cmake
src/software/: CMakeLists.txt
src/software/pipeline/: CMakeLists.txt  main_depthMapEstimation.cpp  main_depthMapFiltering.cpp  main_depthMapFull.cpp  main_meshing.cpp  main_prepareDenseScene.cpp  main_texturing.cpp
src/software/zmq_workers/: CMakeLists.txt  ventilator_depthMapEstimation.cpp  ventilator_depthMapFiltering.cpp  worker_depthMapEstimation.cpp  worker_depthMapFiltering.cpp
tmp/: aliceVision-cfgcmd.txt
